[package]
name = "rav-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.66.0"
clap = { version = "3.2.17", features = ["derive"] }
anyhow = "1.0"
crossterm = "0.25.0"
ctrlc = "3.2.3"
